fixed spacing of count icons on show page

--- a/app/assets/stylesheets/visualization.css.less
+++ b/app/assets/stylesheets/visualization.css.less
@@ -45,7 +45,6 @@
     font-size: 16px;
     font-family: themix_regular;
     margin-top: 3px;
-    width: 30%;
     .heart {
       font-size: 28px;
       vertical-align: middle;
@@ -54,6 +53,15 @@
     img{
       vertical-align: middle;
       margin-right: 3px;
+    }
+    &#like_count{
+      width: 22%;
+    }
+    &#view_count{
+      width: 27%;
+    }
+    &#comment_count{
+      width: 38%;
     }
   }
 }
